--- a/.github/workflows/pythonci.yml
+++ b/.github/workflows/pythonci.yml
@@ -14,14 +14,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - name: lint
+    - name: install
+      run: make install
+      
+    - name: style check
       run: make lint
-      
-    - name: Install dependencies
-      run: make
-      
-    - name: Run check
-      run: make check
-      
-    - name: Run distcheck
-      run: make distcheck
