--- a/.github/workflows/pythonci.yml
+++ b/.github/workflows/pythonci.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: install
-      run: make install
+      run: make package-install
       
     - name: style check
       run: make lint
