yaml diff added

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ gendiff = "gendiff.scripts.gendiff:main"
 
 [tool.poetry.dependencies]
 python = "^3.7"
+PyYAML = "^6.0"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^3.0.0"
